# ThetaCloud

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  DeviceHandlerToken.h  I2CHelpers.h  Makefile  README.rst  SensorData.h  SensorHandlerToken.h  ThetaCloud.cpp  ThetaCloud.h  ThetaCloudCO2.cpp  ThetaCloudCO2.h  ThetaCloudEnvironment.cpp  ThetaCloudEnvironment.h  ThetaCloudHumidity.cpp  ThetaCloudHumidity.h  ThetaCloudI2CScanner.cpp  ThetaCloudI2CScanner.h  ThetaCloudLight.cpp  ThetaCloudLight.h  ThetaCloudPIR.cpp  ThetaCloudPIR.h  ThetaCloudRelay.cpp  ThetaCloudRelay.h  Utils.cpp  Utils.h  conf.py  formatting.cfg  index.rst  keywords.txt  library.properties
doc/: api.rst  flashing.rst  library.rst  newboards-sw.rst  programming.rst
doc/api/: I2CHelpers.rst  SensorData.rst  ThetaCloud.rst  ThetaCloudEnvironment.rst  ThetaCloudHumidity.rst  ThetaCloudI2CScanner.rst  ThetaCloudLight.rst  ThetaCloudPIR.rst  ThetaCloudRelay.rst
doc/library-tutorial/: 01-simplest-application.rst  02-enabling-modules.rst  03-sensor-data-handlers.rst  04-publishing-data-to-sensors.rst
doc/newboards-tutorial/: 01-registering-read-handler.rst  02-registering-write-handler.rst
doc/uml/: Makefile  README.rst  delayedwrite.uml  delayedwrite.utxt  simplewrite.uml  simplewrite.utxt
examples/: MQTT.ino
test/: co2_tests.cpp  environment_tests.cpp  humidity_tests.cpp  i2c_helpers_tests.cpp  light_tests.cpp  pir_tests.cpp  relay_tests.cpp  testing_utils.hpp  theta_cloud_base_tests.cpp
test/fakeIncludes/: Arduino.cpp  Arduino.h  FakeUtils.cpp  MockThetaCloud.cpp  MockThetaCloud.hpp  StaticStuff.cpp  Wire.h  generic_mocks.hpp
